tests/ui/no_pipe.stderr
error: unexpected end of input, expected an expression
 --> tests/ui/no_pipe.rs:3:1
  |
3 | #[command(pipe=)]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `command` (in Nightly builds, run with -Z macro-backtrace for more info)
